--- a/Idea_Main/templates/base.html
+++ b/Idea_Main/templates/base.html
@@ -22,6 +22,7 @@
 
     <!-- Theme Styles -->
     <link rel="stylesheet" type="text/css" href="{%  static 'css/styles.css' %}">
+    <script data-ad-client="ca-pub-4713708648151921" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   </head>
   <!-- End Head -->
 
