--- a/Idea_Main/templates/base.html
+++ b/Idea_Main/templates/base.html
@@ -152,7 +152,7 @@ cookieconsent.run({"notice_banner_type":"simple","consent_type":"express","palet
     var cookie = getCookie(cookieName);
     if (!cookie) {
       alert(
-        "By visiting this page, you agree to its Terms of Service. You may visit the Terms of Service at - https://blog-mayhem.herokuapp.com/terms-of-service"
+        "By visiting this page, you agree to its Terms of Service. You may visit the Terms of Service at - https://ideasbucket.herokuapp.com/terms-of-service"
       );
       createCookie(cookieName, true, 3650);
     }
