--- a/Idea_Main/templates/base.html
+++ b/Idea_Main/templates/base.html
@@ -33,7 +33,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <div class="container">
             <a class="navbar-brand" href="{% url 'home' %}">
-              Idea Bucket <i class="fas fa-archive"></i>
+              IdeasBucket <i class="fas fa-archive"></i>
             </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
