--- a/Register/templates/register/register.html
+++ b/Register/templates/register/register.html
@@ -27,6 +27,8 @@
                         {% csrf_token %}
                         {{register_form|crispy}}
                       </div>
+
+<p>By pressing, "Sign Up" below, I hereby affirm that I have read the <a href="https://ideasbucket.herokuapp.com">Terms of Service</a> and confirm that I at least 18 years of age.</p>
                       <input type="submit" class="btn btn-success" value="Sign Up">
                      
                 
