--- a/Register/templates/register/register.html
+++ b/Register/templates/register/register.html
@@ -28,7 +28,7 @@
                         {{register_form|crispy}}
                       </div>
 
-<p class="text-white">By pressing, "Sign Up" below, I hereby affirm that I have read the <a href="https://ideasbucket/terms-of-service.herokuapp.com">Terms of Service</a> and confirm that I am least 18 years of age.</p>
+<p class="text-white">By pressing, "Sign Up" below, I hereby affirm that I have read the <a href="https://ideasbucket.herokuapp.com/terms-of-service/">Terms of Service</a> and confirm that I am least 18 years of age.</p>
                       <input type="submit" class="btn btn-success" value="Sign Up">
                      
                 
