fixes and licenses

--- a/Post/templates/communities_page.html
+++ b/Post/templates/communities_page.html
@@ -1,3 +1,11 @@
+/*
+ * Stream v1.0 (https://htmlstream.com)
+ * Copyright Htmlstream
+ * Licensed under MIT
+ */
+/*------------------------------------
+  Default Styles
+------------------------------------*/
 {% extends "base.html" %} {% block content %} {% load crispy_forms_tags %} 
 {% load widget_tweaks %}
 <section class="bg-dark u-content-space">
