--- a/Register/templates/registration/login.html
+++ b/Register/templates/registration/login.html
@@ -1,3 +1,11 @@
+/*
+ * Stream v1.0 (https://htmlstream.com)
+ * Copyright Htmlstream
+ * Licensed under MIT
+ */
+/*------------------------------------
+  Default Styles
+------------------------------------*/
 {% extends "base.html" %}
 
 {% block title %} Login {% endblock %}
