--- a/Idea_Main/templates/base.html
+++ b/Idea_Main/templates/base.html
@@ -1,3 +1,11 @@
+/*
+ * Stream v1.0 (https://htmlstream.com)
+ * Copyright Htmlstream
+ * Licensed under MIT
+ */
+/*------------------------------------
+  Default Styles
+------------------------------------*/
 {% load static %}
 
 <!DOCTYPE html>
